// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`grammar should fail case-0 1`] = `
"Line 1, col 20:
> 1 | fun testFunc(): Int;
                         ^
Expected "{""
`;

exports[`grammar should fail case-1 1`] = `
"Line 1, col 5:
> 1 | fun __gen_hello(): Int {
          ^~~~~~~~~~~
  2 |     
Variable name cannot start with "__gen""
`;

exports[`grammar should fail case-2 1`] = `
"Line 2, col 9:
  1 | fun hello(): Int {
> 2 |     let __gen_a: Int = 0;
              ^~~~~~~
  3 | }
Variable name cannot start with "__gen""
`;

exports[`grammar should fail case-3 1`] = `
"Line 2, col 9:
  1 | fun hello(): Int {
> 2 |     let __tact_a: Int = 0;
              ^~~~~~~~
  3 | }
Variable name cannot start with "__tact""
`;

exports[`grammar should fail case-4 1`] = `
"Line 2, col 9:
  1 | fun hello(): Int {
> 2 |     let if: Int = 0;
              ^
  3 | }
Expected not a reservedWord"
`;

exports[`grammar should fail case-5 1`] = `
"Line 1, col 8:
> 1 | struct __genA {
             ^~~~~~
  2 |     a: Int;
Variable name cannot start with "__gen""
`;

exports[`grammar should fail case-6 1`] = `
"Line 1, col 10:
> 1 | fun main(__gen: Int): Int {
               ^~~~~
  2 |     return 0;
Variable name cannot start with "__gen""
`;

exports[`grammar should fail case-7 1`] = `
"Line 1, col 10:
> 1 | contract __gen_a {
               ^~~~~~~
  2 | 
Variable name cannot start with "__gen""
`;

exports[`grammar should fail case-8 1`] = `
"Line 2, col 10:
  1 | contract A {
> 2 |     init(__tact: Int) {
               ^~~~~~
  3 |         
Variable name cannot start with "__tact""
`;

exports[`grammar should fail case-9 1`] = `
"Line 2, col 11:
  1 | contract A {
> 2 |     fun b(__tact: Int) {
                ^~~~~~
  3 |         
Variable name cannot start with "__tact""
`;

exports[`grammar should parse case-0 1`] = `
{
  "entries": [
    {
      "args": [],
      "attribute": [],
      "id": 4,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Int {
    return 0;
},
      "return": {
        "id": 1,
        "kind": "type_ref_simple",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 2,
            "kind": "number",
            "ref": 0,
            "value": 0n,
          },
          "id": 3,
          "kind": "statement_return",
          "ref": return 0;,
        },
      ],
    },
  ],
  "id": 5,
  "kind": "program",
}
`;

exports[`grammar should parse case-1 1`] = `
{
  "entries": [
    {
      "args": [],
      "attribute": [],
      "id": 15,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Int {
    return (0 + 1) * 10 / 20;
},
      "return": {
        "id": 6,
        "kind": "type_ref_simple",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 13,
            "kind": "op_binary",
            "left": {
              "id": 11,
              "kind": "op_binary",
              "left": {
                "id": 9,
                "kind": "op_binary",
                "left": {
                  "id": 7,
                  "kind": "number",
                  "ref": 0,
                  "value": 0n,
                },
                "op": "+",
                "ref": 0 + 1,
                "right": {
                  "id": 8,
                  "kind": "number",
                  "ref": 1,
                  "value": 1n,
                },
              },
              "op": "*",
              "ref": (0 + 1) * 10,
              "right": {
                "id": 10,
                "kind": "number",
                "ref": 10,
                "value": 10n,
              },
            },
            "op": "/",
            "ref": (0 + 1) * 10 / 20,
            "right": {
              "id": 12,
              "kind": "number",
              "ref": 20,
              "value": 20n,
            },
          },
          "id": 14,
          "kind": "statement_return",
          "ref": return (0 + 1) * 10 / 20;,
        },
      ],
    },
  ],
  "id": 16,
  "kind": "program",
}
`;

exports[`grammar should parse case-2 1`] = `
{
  "entries": [
    {
      "args": [],
      "attribute": [],
      "id": 165,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Int {
    return (0 + 1) * 10 / 20 != 10;
},
      "return": {
        "id": 154,
        "kind": "type_ref_simple",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 163,
            "kind": "op_binary",
            "left": {
              "id": 161,
              "kind": "op_binary",
              "left": {
                "id": 159,
                "kind": "op_binary",
                "left": {
                  "id": 157,
                  "kind": "op_binary",
                  "left": {
                    "id": 155,
                    "kind": "number",
                    "ref": 0,
                    "value": 0n,
                  },
                  "op": "+",
                  "ref": 0 + 1,
                  "right": {
                    "id": 156,
                    "kind": "number",
                    "ref": 1,
                    "value": 1n,
                  },
                },
                "op": "*",
                "ref": (0 + 1) * 10,
                "right": {
                  "id": 158,
                  "kind": "number",
                  "ref": 10,
                  "value": 10n,
                },
              },
              "op": "/",
              "ref": (0 + 1) * 10 / 20,
              "right": {
                "id": 160,
                "kind": "number",
                "ref": 20,
                "value": 20n,
              },
            },
            "op": "!=",
            "ref": (0 + 1) * 10 / 20 != 10,
            "right": {
              "id": 162,
              "kind": "number",
              "ref": 10,
              "value": 10n,
            },
          },
          "id": 164,
          "kind": "statement_return",
          "ref": return (0 + 1) * 10 / 20 != 10;,
        },
      ],
    },
  ],
  "id": 166,
  "kind": "program",
}
`;

exports[`grammar should parse case-3 1`] = `
{
  "entries": [
    {
      "args": [],
      "attribute": [],
      "id": 187,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Int {
    return (0 + 1) * 10 / 20 != 10 * someId;
},
      "return": {
        "id": 174,
        "kind": "type_ref_simple",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 185,
            "kind": "op_binary",
            "left": {
              "id": 181,
              "kind": "op_binary",
              "left": {
                "id": 179,
                "kind": "op_binary",
                "left": {
                  "id": 177,
                  "kind": "op_binary",
                  "left": {
                    "id": 175,
                    "kind": "number",
                    "ref": 0,
                    "value": 0n,
                  },
                  "op": "+",
                  "ref": 0 + 1,
                  "right": {
                    "id": 176,
                    "kind": "number",
                    "ref": 1,
                    "value": 1n,
                  },
                },
                "op": "*",
                "ref": (0 + 1) * 10,
                "right": {
                  "id": 178,
                  "kind": "number",
                  "ref": 10,
                  "value": 10n,
                },
              },
              "op": "/",
              "ref": (0 + 1) * 10 / 20,
              "right": {
                "id": 180,
                "kind": "number",
                "ref": 20,
                "value": 20n,
              },
            },
            "op": "!=",
            "ref": (0 + 1) * 10 / 20 != 10 * someId,
            "right": {
              "id": 184,
              "kind": "op_binary",
              "left": {
                "id": 182,
                "kind": "number",
                "ref": 10,
                "value": 10n,
              },
              "op": "*",
              "ref": 10 * someId,
              "right": {
                "id": 183,
                "kind": "id",
                "ref": someId,
                "value": "someId",
              },
            },
          },
          "id": 186,
          "kind": "statement_return",
          "ref": return (0 + 1) * 10 / 20 != 10 * someId;,
        },
      ],
    },
  ],
  "id": 188,
  "kind": "program",
}
`;

exports[`grammar should parse case-4 1`] = `
{
  "entries": [
    {
      "args": [],
      "attribute": [],
      "id": 210,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Int {
    return (0 + 1) * 10 / 20 != 10 * someId || some2 > 10 && some3 < 10;
},
      "return": {
        "id": 189,
        "kind": "type_ref_simple",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 208,
            "kind": "op_binary",
            "left": {
              "id": 200,
              "kind": "op_binary",
              "left": {
                "id": 196,
                "kind": "op_binary",
                "left": {
                  "id": 194,
                  "kind": "op_binary",
                  "left": {
                    "id": 192,
                    "kind": "op_binary",
                    "left": {
                      "id": 190,
                      "kind": "number",
                      "ref": 0,
                      "value": 0n,
                    },
                    "op": "+",
                    "ref": 0 + 1,
                    "right": {
                      "id": 191,
                      "kind": "number",
                      "ref": 1,
                      "value": 1n,
                    },
                  },
                  "op": "*",
                  "ref": (0 + 1) * 10,
                  "right": {
                    "id": 193,
                    "kind": "number",
                    "ref": 10,
                    "value": 10n,
                  },
                },
                "op": "/",
                "ref": (0 + 1) * 10 / 20,
                "right": {
                  "id": 195,
                  "kind": "number",
                  "ref": 20,
                  "value": 20n,
                },
              },
              "op": "!=",
              "ref": (0 + 1) * 10 / 20 != 10 * someId,
              "right": {
                "id": 199,
                "kind": "op_binary",
                "left": {
                  "id": 197,
                  "kind": "number",
                  "ref": 10,
                  "value": 10n,
                },
                "op": "*",
                "ref": 10 * someId,
                "right": {
                  "id": 198,
                  "kind": "id",
                  "ref": someId,
                  "value": "someId",
                },
              },
            },
            "op": "||",
            "ref": (0 + 1) * 10 / 20 != 10 * someId || some2 > 10 && some3 < 10,
            "right": {
              "id": 207,
              "kind": "op_binary",
              "left": {
                "id": 203,
                "kind": "op_binary",
                "left": {
                  "id": 201,
                  "kind": "id",
                  "ref": some2,
                  "value": "some2",
                },
                "op": ">",
                "ref": some2 > 10,
                "right": {
                  "id": 202,
                  "kind": "number",
                  "ref": 10,
                  "value": 10n,
                },
              },
              "op": "&&",
              "ref": some2 > 10 && some3 < 10,
              "right": {
                "id": 206,
                "kind": "op_binary",
                "left": {
                  "id": 204,
                  "kind": "id",
                  "ref": some3,
                  "value": "some3",
                },
                "op": ">",
                "ref": some3 < 10,
                "right": {
                  "id": 205,
                  "kind": "number",
                  "ref": 10,
                  "value": 10n,
                },
              },
            },
          },
          "id": 209,
          "kind": "statement_return",
          "ref": return (0 + 1) * 10 / 20 != 10 * someId || some2 > 10 && some3 < 10;,
        },
      ],
    },
  ],
  "id": 211,
  "kind": "program",
}
`;

exports[`grammar should parse case-5 1`] = `
{
  "entries": [
    {
      "args": [],
      "attribute": [],
      "id": 235,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Int {
    return (0 + 1) * 10 / 20 != 10 * someId || some2 > 10 && some3 < 123.add(10);
},
      "return": {
        "id": 212,
        "kind": "type_ref_simple",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 233,
            "kind": "op_binary",
            "left": {
              "id": 223,
              "kind": "op_binary",
              "left": {
                "id": 219,
                "kind": "op_binary",
                "left": {
                  "id": 217,
                  "kind": "op_binary",
                  "left": {
                    "id": 215,
                    "kind": "op_binary",
                    "left": {
                      "id": 213,
                      "kind": "number",
                      "ref": 0,
                      "value": 0n,
                    },
                    "op": "+",
                    "ref": 0 + 1,
                    "right": {
                      "id": 214,
                      "kind": "number",
                      "ref": 1,
                      "value": 1n,
                    },
                  },
                  "op": "*",
                  "ref": (0 + 1) * 10,
                  "right": {
                    "id": 216,
                    "kind": "number",
                    "ref": 10,
                    "value": 10n,
                  },
                },
                "op": "/",
                "ref": (0 + 1) * 10 / 20,
                "right": {
                  "id": 218,
                  "kind": "number",
                  "ref": 20,
                  "value": 20n,
                },
              },
              "op": "!=",
              "ref": (0 + 1) * 10 / 20 != 10 * someId,
              "right": {
                "id": 222,
                "kind": "op_binary",
                "left": {
                  "id": 220,
                  "kind": "number",
                  "ref": 10,
                  "value": 10n,
                },
                "op": "*",
                "ref": 10 * someId,
                "right": {
                  "id": 221,
                  "kind": "id",
                  "ref": someId,
                  "value": "someId",
                },
              },
            },
            "op": "||",
            "ref": (0 + 1) * 10 / 20 != 10 * someId || some2 > 10 && some3 < 123.add(10),
            "right": {
              "id": 232,
              "kind": "op_binary",
              "left": {
                "id": 226,
                "kind": "op_binary",
                "left": {
                  "id": 224,
                  "kind": "id",
                  "ref": some2,
                  "value": "some2",
                },
                "op": ">",
                "ref": some2 > 10,
                "right": {
                  "id": 225,
                  "kind": "number",
                  "ref": 10,
                  "value": 10n,
                },
              },
              "op": "&&",
              "ref": some2 > 10 && some3 < 123.add(10),
              "right": {
                "id": 231,
                "kind": "op_binary",
                "left": {
                  "id": 227,
                  "kind": "id",
                  "ref": some3,
                  "value": "some3",
                },
                "op": ">",
                "ref": some3 < 123.add(10),
                "right": {
                  "args": [
                    {
                      "id": 229,
                      "kind": "number",
                      "ref": 10,
                      "value": 10n,
                    },
                  ],
                  "id": 230,
                  "kind": "op_call",
                  "name": "add",
                  "ref": 123.add(10),
                  "src": {
                    "id": 228,
                    "kind": "number",
                    "ref": 123,
                    "value": 123n,
                  },
                },
              },
            },
          },
          "id": 234,
          "kind": "statement_return",
          "ref": return (0 + 1) * 10 / 20 != 10 * someId || some2 > 10 && some3 < 123.add(10);,
        },
      ],
    },
  ],
  "id": 236,
  "kind": "program",
}
`;

exports[`grammar should parse case-6 1`] = `
{
  "entries": [
    {
      "args": [],
      "attribute": [],
      "id": 261,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Int {
    return (0 + 1) * 10 / 20 != 10 * someId || some2 > 10 && some3 < abs(123.add(10));
},
      "return": {
        "id": 237,
        "kind": "type_ref_simple",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 259,
            "kind": "op_binary",
            "left": {
              "id": 248,
              "kind": "op_binary",
              "left": {
                "id": 244,
                "kind": "op_binary",
                "left": {
                  "id": 242,
                  "kind": "op_binary",
                  "left": {
                    "id": 240,
                    "kind": "op_binary",
                    "left": {
                      "id": 238,
                      "kind": "number",
                      "ref": 0,
                      "value": 0n,
                    },
                    "op": "+",
                    "ref": 0 + 1,
                    "right": {
                      "id": 239,
                      "kind": "number",
                      "ref": 1,
                      "value": 1n,
                    },
                  },
                  "op": "*",
                  "ref": (0 + 1) * 10,
                  "right": {
                    "id": 241,
                    "kind": "number",
                    "ref": 10,
                    "value": 10n,
                  },
                },
                "op": "/",
                "ref": (0 + 1) * 10 / 20,
                "right": {
                  "id": 243,
                  "kind": "number",
                  "ref": 20,
                  "value": 20n,
                },
              },
              "op": "!=",
              "ref": (0 + 1) * 10 / 20 != 10 * someId,
              "right": {
                "id": 247,
                "kind": "op_binary",
                "left": {
                  "id": 245,
                  "kind": "number",
                  "ref": 10,
                  "value": 10n,
                },
                "op": "*",
                "ref": 10 * someId,
                "right": {
                  "id": 246,
                  "kind": "id",
                  "ref": someId,
                  "value": "someId",
                },
              },
            },
            "op": "||",
            "ref": (0 + 1) * 10 / 20 != 10 * someId || some2 > 10 && some3 < abs(123.add(10)),
            "right": {
              "id": 258,
              "kind": "op_binary",
              "left": {
                "id": 251,
                "kind": "op_binary",
                "left": {
                  "id": 249,
                  "kind": "id",
                  "ref": some2,
                  "value": "some2",
                },
                "op": ">",
                "ref": some2 > 10,
                "right": {
                  "id": 250,
                  "kind": "number",
                  "ref": 10,
                  "value": 10n,
                },
              },
              "op": "&&",
              "ref": some2 > 10 && some3 < abs(123.add(10)),
              "right": {
                "id": 257,
                "kind": "op_binary",
                "left": {
                  "id": 252,
                  "kind": "id",
                  "ref": some3,
                  "value": "some3",
                },
                "op": ">",
                "ref": some3 < abs(123.add(10)),
                "right": {
                  "args": [
                    {
                      "args": [
                        {
                          "id": 254,
                          "kind": "number",
                          "ref": 10,
                          "value": 10n,
                        },
                      ],
                      "id": 255,
                      "kind": "op_call",
                      "name": "add",
                      "ref": 123.add(10),
                      "src": {
                        "id": 253,
                        "kind": "number",
                        "ref": 123,
                        "value": 123n,
                      },
                    },
                  ],
                  "id": 256,
                  "kind": "op_static_call",
                  "name": "abs",
                  "ref": abs(123.add(10)),
                },
              },
            },
          },
          "id": 260,
          "kind": "statement_return",
          "ref": return (0 + 1) * 10 / 20 != 10 * someId || some2 > 10 && some3 < abs(123.add(10));,
        },
      ],
    },
  ],
  "id": 262,
  "kind": "program",
}
`;

exports[`grammar should parse case-7 1`] = `
{
  "entries": [
    {
      "args": [],
      "attribute": [],
      "id": 265,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc() {
    return 0;
},
      "return": null,
      "statements": [
        {
          "expression": {
            "id": 263,
            "kind": "number",
            "ref": 0,
            "value": 0n,
          },
          "id": 264,
          "kind": "statement_return",
          "ref": return 0;,
        },
      ],
    },
    {
      "args": [],
      "attribute": [],
      "id": 269,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Int {
    return 0;
},
      "return": {
        "id": 266,
        "kind": "type_ref_simple",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 267,
            "kind": "number",
            "ref": 0,
            "value": 0n,
          },
          "id": 268,
          "kind": "statement_return",
          "ref": return 0;,
        },
      ],
    },
    {
      "args": [],
      "attribute": [],
      "id": 273,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Bool {
    return 0;
},
      "return": {
        "id": 270,
        "kind": "type_ref_simple",
        "name": "Bool",
        "optional": false,
        "ref": Bool,
      },
      "statements": [
        {
          "expression": {
            "id": 271,
            "kind": "number",
            "ref": 0,
            "value": 0n,
          },
          "id": 272,
          "kind": "statement_return",
          "ref": return 0;,
        },
      ],
    },
  ],
  "id": 274,
  "kind": "program",
}
`;

exports[`grammar should parse case-8 1`] = `
{
  "entries": [
    {
      "args": [],
      "id": 275,
      "kind": "def_native_function",
      "name": "testFunc",
      "nativeName": "native_name_1",
      "ref": @name(native_name_1)
native testFunc();,
      "return": null,
    },
    {
      "args": [],
      "id": 277,
      "kind": "def_native_function",
      "name": "testFunc",
      "nativeName": "native_name_2",
      "ref": @name(native_name_2)
native testFunc(): Int;,
      "return": {
        "id": 276,
        "kind": "type_ref_simple",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
    },
    {
      "args": [],
      "id": 279,
      "kind": "def_native_function",
      "name": "testFunc",
      "nativeName": "native_name_3",
      "ref": @name(native_name_3)
native testFunc(): Bool;,
      "return": {
        "id": 278,
        "kind": "type_ref_simple",
        "name": "Bool",
        "optional": false,
        "ref": Bool,
      },
    },
  ],
  "id": 280,
  "kind": "program",
}
`;

exports[`grammar should parse case-9 1`] = `
{
  "entries": [
    {
      "args": [],
      "attribute": [],
      "id": 291,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Int {
    return 1 + 2 + 3!! > 123;
},
      "return": {
        "id": 281,
        "kind": "type_ref_simple",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 289,
            "kind": "op_binary",
            "left": {
              "id": 287,
              "kind": "op_binary",
              "left": {
                "id": 284,
                "kind": "op_binary",
                "left": {
                  "id": 282,
                  "kind": "number",
                  "ref": 1,
                  "value": 1n,
                },
                "op": "+",
                "ref": 1 + 2,
                "right": {
                  "id": 283,
                  "kind": "number",
                  "ref": 2,
                  "value": 2n,
                },
              },
              "op": "+",
              "ref": 1 + 2 + 3!!,
              "right": {
                "id": 286,
                "kind": "op_unary",
                "op": "!!",
                "ref": 3!!,
                "right": {
                  "id": 285,
                  "kind": "number",
                  "ref": 3,
                  "value": 3n,
                },
              },
            },
            "op": ">",
            "ref": 1 + 2 + 3!! > 123,
            "right": {
              "id": 288,
              "kind": "number",
              "ref": 123,
              "value": 123n,
            },
          },
          "id": 290,
          "kind": "statement_return",
          "ref": return 1 + 2 + 3!! > 123;,
        },
      ],
    },
  ],
  "id": 292,
  "kind": "program",
}
`;

exports[`grammar should parse case-10 1`] = `
{
  "entries": [
    {
      "args": [],
      "attribute": [],
      "id": 29,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(): Int {
    return 1 + 2 + (123 + 3)!! > 123;
},
      "return": {
        "id": 17,
        "kind": "type_ref_simple",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 27,
            "kind": "op_binary",
            "left": {
              "id": 25,
              "kind": "op_binary",
              "left": {
                "id": 20,
                "kind": "op_binary",
                "left": {
                  "id": 18,
                  "kind": "number",
                  "ref": 1,
                  "value": 1n,
                },
                "op": "+",
                "ref": 1 + 2,
                "right": {
                  "id": 19,
                  "kind": "number",
                  "ref": 2,
                  "value": 2n,
                },
              },
              "op": "+",
              "ref": 1 + 2 + (123 + 3)!!,
              "right": {
                "id": 24,
                "kind": "op_unary",
                "op": "!!",
                "ref": (123 + 3)!!,
                "right": {
                  "id": 23,
                  "kind": "op_binary",
                  "left": {
                    "id": 21,
                    "kind": "number",
                    "ref": 123,
                    "value": 123n,
                  },
                  "op": "+",
                  "ref": 123 + 3,
                  "right": {
                    "id": 22,
                    "kind": "number",
                    "ref": 3,
                    "value": 3n,
                  },
                },
              },
            },
            "op": ">",
            "ref": 1 + 2 + (123 + 3)!! > 123,
            "right": {
              "id": 26,
              "kind": "number",
              "ref": 123,
              "value": 123n,
            },
          },
          "id": 28,
          "kind": "statement_return",
          "ref": return 1 + 2 + (123 + 3)!! > 123;,
        },
      ],
    },
  ],
  "id": 30,
  "kind": "program",
}
`;

exports[`grammar should parse case-11 1`] = `
{
  "entries": [
    {
      "args": [
        {
          "id": 33,
          "kind": "def_argument",
          "name": "src",
          "ref": src: Int?,
          "type": {
            "id": 32,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": true,
            "ref": Int?,
          },
        },
      ],
      "attribute": [],
      "id": 45,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(src: Int?): Int {
    return 1 + 2 + (123 + 3)!! > 123;
},
      "return": {
        "id": 31,
        "kind": "type_ref_simple",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "expression": {
            "id": 43,
            "kind": "op_binary",
            "left": {
              "id": 41,
              "kind": "op_binary",
              "left": {
                "id": 36,
                "kind": "op_binary",
                "left": {
                  "id": 34,
                  "kind": "number",
                  "ref": 1,
                  "value": 1n,
                },
                "op": "+",
                "ref": 1 + 2,
                "right": {
                  "id": 35,
                  "kind": "number",
                  "ref": 2,
                  "value": 2n,
                },
              },
              "op": "+",
              "ref": 1 + 2 + (123 + 3)!!,
              "right": {
                "id": 40,
                "kind": "op_unary",
                "op": "!!",
                "ref": (123 + 3)!!,
                "right": {
                  "id": 39,
                  "kind": "op_binary",
                  "left": {
                    "id": 37,
                    "kind": "number",
                    "ref": 123,
                    "value": 123n,
                  },
                  "op": "+",
                  "ref": 123 + 3,
                  "right": {
                    "id": 38,
                    "kind": "number",
                    "ref": 3,
                    "value": 3n,
                  },
                },
              },
            },
            "op": ">",
            "ref": 1 + 2 + (123 + 3)!! > 123,
            "right": {
              "id": 42,
              "kind": "number",
              "ref": 123,
              "value": 123n,
            },
          },
          "id": 44,
          "kind": "statement_return",
          "ref": return 1 + 2 + (123 + 3)!! > 123;,
        },
      ],
    },
  ],
  "id": 46,
  "kind": "program",
}
`;

exports[`grammar should parse case-12 1`] = `
{
  "entries": [
    {
      "args": [
        {
          "id": 49,
          "kind": "def_argument",
          "name": "src",
          "ref": src: Int?,
          "type": {
            "id": 48,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": true,
            "ref": Int?,
          },
        },
      ],
      "attribute": [],
      "id": 58,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(src: Int?): Int {
    if (src != null) {
        return src;
    }
    return 0;
},
      "return": {
        "id": 47,
        "kind": "type_ref_simple",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "elseif": null,
          "expression": {
            "id": 52,
            "kind": "op_binary",
            "left": {
              "id": 50,
              "kind": "id",
              "ref": src,
              "value": "src",
            },
            "op": "!=",
            "ref": src != null,
            "right": {
              "id": 51,
              "kind": "null",
              "ref": null,
            },
          },
          "falseStatements": [],
          "id": 55,
          "kind": "statement_condition",
          "ref": if (src != null) {
        return src;
    },
          "trueStatements": [
            {
              "expression": {
                "id": 53,
                "kind": "id",
                "ref": src,
                "value": "src",
              },
              "id": 54,
              "kind": "statement_return",
              "ref": return src;,
            },
          ],
        },
        {
          "expression": {
            "id": 56,
            "kind": "number",
            "ref": 0,
            "value": 0n,
          },
          "id": 57,
          "kind": "statement_return",
          "ref": return 0;,
        },
      ],
    },
  ],
  "id": 59,
  "kind": "program",
}
`;

exports[`grammar should parse case-13 1`] = `
{
  "entries": [
    {
      "args": [
        {
          "id": 62,
          "kind": "def_argument",
          "name": "src",
          "ref": src: Int?,
          "type": {
            "id": 61,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": true,
            "ref": Int?,
          },
        },
      ],
      "attribute": [],
      "id": 71,
      "kind": "def_function",
      "name": "testFunc",
      "ref": fun testFunc(src: Int?): Int {
    if (src != null) {
        return src;
    } else {
        return 10;
    }
},
      "return": {
        "id": 60,
        "kind": "type_ref_simple",
        "name": "Int",
        "optional": false,
        "ref": Int,
      },
      "statements": [
        {
          "elseif": null,
          "expression": {
            "id": 65,
            "kind": "op_binary",
            "left": {
              "id": 63,
              "kind": "id",
              "ref": src,
              "value": "src",
            },
            "op": "!=",
            "ref": src != null,
            "right": {
              "id": 64,
              "kind": "null",
              "ref": null,
            },
          },
          "falseStatements": [
            {
              "expression": {
                "id": 68,
                "kind": "number",
                "ref": 10,
                "value": 10n,
              },
              "id": 69,
              "kind": "statement_return",
              "ref": return 10;,
            },
          ],
          "id": 70,
          "kind": "statement_condition",
          "ref": if (src != null) {
        return src;
    } else {
        return 10;
    },
          "trueStatements": [
            {
              "expression": {
                "id": 66,
                "kind": "id",
                "ref": src,
                "value": "src",
              },
              "id": 67,
              "kind": "statement_return",
              "ref": return src;,
            },
          ],
        },
      ],
    },
  ],
  "id": 72,
  "kind": "program",
}
`;

exports[`grammar should parse case-14 1`] = `
{
  "entries": [
    {
      "declarations": [
        {
          "as": null,
          "id": 74,
          "init": undefined,
          "kind": "def_field",
          "name": "a",
          "ref": a: Int;,
          "type": {
            "id": 73,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
        },
        {
          "as": null,
          "id": 76,
          "init": undefined,
          "kind": "def_field",
          "name": "b",
          "ref": b: Int;,
          "type": {
            "id": 75,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
        },
        {
          "args": [
            {
              "id": 78,
              "kind": "def_argument",
              "name": "a",
              "ref": a: Int,
              "type": {
                "id": 77,
                "kind": "type_ref_simple",
                "name": "Int",
                "optional": false,
                "ref": Int,
              },
            },
            {
              "id": 80,
              "kind": "def_argument",
              "name": "b",
              "ref": b: Int,
              "type": {
                "id": 79,
                "kind": "type_ref_simple",
                "name": "Int",
                "optional": false,
                "ref": Int,
              },
            },
          ],
          "id": 85,
          "kind": "def_init_function",
          "ref": init(a: Int, b: Int) {
        self.a = a;
        self.b = b;
    },
          "statements": [
            {
              "expression": {
                "id": 81,
                "kind": "id",
                "ref": a,
                "value": "a",
              },
              "id": 82,
              "kind": "statement_assign",
              "path": [
                "self",
                "a",
              ],
              "ref": self.a = a;,
            },
            {
              "expression": {
                "id": 83,
                "kind": "id",
                "ref": b,
                "value": "b",
              },
              "id": 84,
              "kind": "statement_assign",
              "path": [
                "self",
                "b",
              ],
              "ref": self.b = b;,
            },
          ],
        },
      ],
      "id": 86,
      "kind": "def_contract",
      "name": "Sample",
      "ref": contract Sample {
    a: Int;
    b: Int;
    
    init(a: Int, b: Int) {
        self.a = a;
        self.b = b;
    }
},
    },
  ],
  "id": 87,
  "kind": "program",
}
`;

exports[`grammar should parse case-15 1`] = `
{
  "entries": [
    {
      "args": [],
      "attribute": [],
      "id": 109,
      "kind": "def_function",
      "name": "main",
      "ref": fun main() {
    let i: Int = 1;
    while(true) {
        i = i + 1;
    }
    repeat(10) {
        i = i * 10;
    }
    do {
        i = i - 1;
    } until(false);
},
      "return": null,
      "statements": [
        {
          "expression": {
            "id": 89,
            "kind": "number",
            "ref": 1,
            "value": 1n,
          },
          "id": 90,
          "kind": "statement_let",
          "name": "i",
          "ref": let i: Int = 1;,
          "type": {
            "id": 88,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
        },
        {
          "condition": {
            "id": 91,
            "kind": "boolean",
            "ref": true,
            "value": true,
          },
          "id": 96,
          "kind": "statement_while",
          "ref": while(true) {
        i = i + 1;
    },
          "statements": [
            {
              "expression": {
                "id": 94,
                "kind": "op_binary",
                "left": {
                  "id": 92,
                  "kind": "id",
                  "ref": i,
                  "value": "i",
                },
                "op": "+",
                "ref": i + 1,
                "right": {
                  "id": 93,
                  "kind": "number",
                  "ref": 1,
                  "value": 1n,
                },
              },
              "id": 95,
              "kind": "statement_assign",
              "path": [
                "i",
              ],
              "ref": i = i + 1;,
            },
          ],
        },
        {
          "condition": {
            "id": 97,
            "kind": "number",
            "ref": 10,
            "value": 10n,
          },
          "id": 102,
          "kind": "statement_repeat",
          "ref": repeat(10) {
        i = i * 10;
    },
          "statements": [
            {
              "expression": {
                "id": 100,
                "kind": "op_binary",
                "left": {
                  "id": 98,
                  "kind": "id",
                  "ref": i,
                  "value": "i",
                },
                "op": "*",
                "ref": i * 10,
                "right": {
                  "id": 99,
                  "kind": "number",
                  "ref": 10,
                  "value": 10n,
                },
              },
              "id": 101,
              "kind": "statement_assign",
              "path": [
                "i",
              ],
              "ref": i = i * 10;,
            },
          ],
        },
        {
          "condition": {
            "id": 103,
            "kind": "boolean",
            "ref": false,
            "value": false,
          },
          "id": 108,
          "kind": "statement_until",
          "ref": do {
        i = i - 1;
    } until(false);,
          "statements": [
            {
              "expression": {
                "id": 106,
                "kind": "op_binary",
                "left": {
                  "id": 104,
                  "kind": "id",
                  "ref": i,
                  "value": "i",
                },
                "op": "-",
                "ref": i - 1,
                "right": {
                  "id": 105,
                  "kind": "number",
                  "ref": 1,
                  "value": 1n,
                },
              },
              "id": 107,
              "kind": "statement_assign",
              "path": [
                "i",
              ],
              "ref": i = i - 1;,
            },
          ],
        },
      ],
    },
  ],
  "id": 110,
  "kind": "program",
}
`;

exports[`grammar should parse case-16 1`] = `
{
  "entries": [
    {
      "args": [],
      "attribute": [],
      "id": 126,
      "kind": "def_function",
      "name": "main",
      "ref": fun main() {
    let i: Int = 1;
    while(i >= 10 || i <= 100) {
        i = i + 1;
    }
},
      "return": null,
      "statements": [
        {
          "expression": {
            "id": 112,
            "kind": "number",
            "ref": 1,
            "value": 1n,
          },
          "id": 113,
          "kind": "statement_let",
          "name": "i",
          "ref": let i: Int = 1;,
          "type": {
            "id": 111,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
        },
        {
          "condition": {
            "id": 120,
            "kind": "op_binary",
            "left": {
              "id": 116,
              "kind": "op_binary",
              "left": {
                "id": 114,
                "kind": "id",
                "ref": i,
                "value": "i",
              },
              "op": ">=",
              "ref": i >= 10,
              "right": {
                "id": 115,
                "kind": "number",
                "ref": 10,
                "value": 10n,
              },
            },
            "op": "||",
            "ref": i >= 10 || i <= 100,
            "right": {
              "id": 119,
              "kind": "op_binary",
              "left": {
                "id": 117,
                "kind": "id",
                "ref": i,
                "value": "i",
              },
              "op": ">=",
              "ref": i <= 100,
              "right": {
                "id": 118,
                "kind": "number",
                "ref": 100,
                "value": 100n,
              },
            },
          },
          "id": 125,
          "kind": "statement_while",
          "ref": while(i >= 10 || i <= 100) {
        i = i + 1;
    },
          "statements": [
            {
              "expression": {
                "id": 123,
                "kind": "op_binary",
                "left": {
                  "id": 121,
                  "kind": "id",
                  "ref": i,
                  "value": "i",
                },
                "op": "+",
                "ref": i + 1,
                "right": {
                  "id": 122,
                  "kind": "number",
                  "ref": 1,
                  "value": 1n,
                },
              },
              "id": 124,
              "kind": "statement_assign",
              "path": [
                "i",
              ],
              "ref": i = i + 1;,
            },
          ],
        },
      ],
    },
  ],
  "id": 127,
  "kind": "program",
}
`;

exports[`grammar should parse case-17 1`] = `
{
  "entries": [
    {
      "fields": [
        {
          "as": null,
          "id": 129,
          "init": undefined,
          "kind": "def_field",
          "name": "x",
          "ref": x: Int;,
          "type": {
            "id": 128,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
        },
      ],
      "id": 130,
      "kind": "def_struct",
      "message": false,
      "name": "A",
      "ref": struct A {
    x: Int;
},
    },
    {
      "fields": [
        {
          "as": null,
          "id": 132,
          "init": undefined,
          "kind": "def_field",
          "name": "x",
          "ref": x: Int;,
          "type": {
            "id": 131,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
        },
      ],
      "id": 133,
      "kind": "def_struct",
      "message": true,
      "name": "B",
      "ref": message B {
    x: Int;
},
    },
  ],
  "id": 134,
  "kind": "program",
}
`;

exports[`grammar should parse case-18 1`] = `
{
  "entries": [
    {
      "fields": [
        {
          "as": null,
          "id": 136,
          "init": undefined,
          "kind": "def_field",
          "name": "x",
          "ref": x: Int;,
          "type": {
            "id": 135,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
        },
      ],
      "id": 137,
      "kind": "def_struct",
      "message": false,
      "name": "A",
      "ref": struct A {
    x: Int;
},
    },
    {
      "fields": [
        {
          "as": "coin",
          "id": 139,
          "init": undefined,
          "kind": "def_field",
          "name": "x",
          "ref": x: Int as coin;,
          "type": {
            "id": 138,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
        },
      ],
      "id": 140,
      "kind": "def_struct",
      "message": true,
      "name": "B",
      "ref": message B {
    x: Int as coin;
},
    },
  ],
  "id": 141,
  "kind": "program",
}
`;

exports[`grammar should parse case-19 1`] = `
{
  "entries": [
    {
      "fields": [
        {
          "as": null,
          "id": 144,
          "init": 1000n,
          "kind": "def_field",
          "name": "x",
          "ref": x: Int = 1000;,
          "type": {
            "id": 142,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
        },
      ],
      "id": 145,
      "kind": "def_struct",
      "message": false,
      "name": "A",
      "ref": struct A {
    x: Int = 1000;
},
    },
    {
      "fields": [
        {
          "as": "coins",
          "id": 148,
          "init": 1000n,
          "kind": "def_field",
          "name": "x",
          "ref": x: Int as coins = 1000;,
          "type": {
            "id": 146,
            "kind": "type_ref_simple",
            "name": "Int",
            "optional": false,
            "ref": Int,
          },
        },
        {
          "as": null,
          "id": 151,
          "init": true,
          "kind": "def_field",
          "name": "y",
          "ref": y: Bool = true;,
          "type": {
            "id": 149,
            "kind": "type_ref_simple",
            "name": "Bool",
            "optional": false,
            "ref": Bool,
          },
        },
      ],
      "id": 152,
      "kind": "def_struct",
      "message": true,
      "name": "B",
      "ref": message B {
    x: Int as coins = 1000;
    y: Bool = true;
},
    },
  ],
  "id": 153,
  "kind": "program",
}
`;

exports[`grammar should parse case-20 1`] = `
{
  "entries": [
    {
      "fields": [
        {
          "as": null,
          "id": 168,
          "init": undefined,
          "kind": "def_field",
          "name": "y",
          "ref": y: map[Int]Int;,
          "type": {
            "id": 167,
            "key": "Int",
            "kind": "type_ref_map",
            "ref": map[Int]Int,
            "value": "Int",
          },
        },
      ],
      "id": 169,
      "kind": "def_struct",
      "message": false,
      "name": "A",
      "ref": struct A {
    y: map[Int]Int;
},
    },
    {
      "fields": [
        {
          "as": null,
          "id": 171,
          "init": undefined,
          "kind": "def_field",
          "name": "x",
          "ref": x: map[Int]Int;,
          "type": {
            "id": 170,
            "key": "Int",
            "kind": "type_ref_map",
            "ref": map[Int]Int,
            "value": "Int",
          },
        },
      ],
      "id": 172,
      "kind": "def_struct",
      "message": true,
      "name": "B",
      "ref": message B {
    x: map[Int]Int;
},
    },
  ],
  "id": 173,
  "kind": "program",
}
`;
